--- a/index.html
+++ b/index.html
@@ -14,26 +14,20 @@
 <body>
     <!-- Navigation -->
     <nav class="navbar">
-        <div class="nav-container">
-            <div class="nav-logo">
-                <h3>Shivaprasad MB</h3>
-            </div>
-            <ul class="nav-menu">
-                <li class="nav-item">
-                    <a href="#home" class="nav-link">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#about" class="nav-link">About</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#skills" class="nav-link">Skills</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#contact" class="nav-link">Contact</a>
-                </li>
-            </ul>
+    <div class="nav-container">
+        <div class="nav-logo">
+            <h3>Shivaprasad MB</h3>
         </div>
-    </nav>
+        <div class="menu-toggle" id="mobile-menu">&#9776;</div>
+        <ul class="nav-menu" id="nav-menu">
+            <li class="nav-item"><a href="#home" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="#about" class="nav-link">About</a></li>
+            <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+            <li class="nav-item"><a href="#contact" class="nav-link">Contact</a></li>
+        </ul>
+    </div>
+</nav>
+
 
     
     <section id="home" class="hero">
@@ -265,38 +259,55 @@
     </footer>
 
     <script>
-        // Smooth scrolling for navigation links
+    // Smooth scrolling for navigation links
+    document.addEventListener('DOMContentLoaded', () => {
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-        anchor.addEventListener('click', function (e) {
-        const href = this.getAttribute('href');
-        if (href === "#popup") return; // let popup work normally
-        e.preventDefault();
-        const target = document.querySelector(href);
-        if (target) {
-            target.scrollIntoView({
-                behavior: 'smooth',
-                block: 'start'
+            anchor.addEventListener('click', function (e) {
+                const href = this.getAttribute('href');
+
+                // Skip popup or just '#' links
+                if (!href || href === "#" || href === "#popup") return;
+
+                e.preventDefault();
+                const target = document.querySelector(href);
+                if (target) {
+                    target.scrollIntoView({
+                        behavior: 'smooth',
+                        block: 'start'
+                    });
+                }
             });
+        });
+    });
+
+    // Navbar scroll effect
+    window.addEventListener('scroll', () => {
+        const navbar = document.querySelector('.navbar');
+        if (window.scrollY > 50) {
+            navbar.classList.add('scrolled');
+        } else {
+            navbar.classList.remove('scrolled');
         }
+    });
+
+    // Contact function
+    function contact() {
+        alert('Thank you for your interest! Please reach out via LinkedIn or Twitter.');
+    }
+
+    // Mobile menu toggle
+document.addEventListener('DOMContentLoaded', () => {
+    const menuToggle = document.getElementById('mobile-menu');
+    const navMenu = document.getElementById('nav-menu');
+
+    menuToggle.addEventListener('click', () => {
+        navMenu.classList.toggle('active');
     });
 });
 
 
-        // Navbar scroll effect
-        window.addEventListener('scroll', () => {
-            const navbar = document.querySelector('.navbar');
-            if (window.scrollY > 50) {
-                navbar.classList.add('scrolled');
-            } else {
-                navbar.classList.remove('scrolled');
-            }
-        });
-
-        // Contact function
-        function contact() {
-            alert('Thank you for your interest! Please reach out via LinkedIn or Twitter.');
-        }
-    </script> 
+</script>
+ 
     
     <!-- Contact Popup (place at end of body) -->
     <div id="popup">
