--- a/index.html
+++ b/index.html
@@ -53,7 +53,9 @@
                 </div>
             </div>
         </div>
-        
+        <img class="mountain-img" src="mountain.png" alt="mountain landscape">
+        <img class="cloud cloud-1" src="cloud.png" alt="cloud">
+        <img class="cloud cloud-2" src="cloud.png" alt="cloud">
     </section>
 
     <!-- About Section -->
